# egglog-z3

./: Cargo.toml
src/: lib.rs  main.rs
