[package]
name = "egglog-z3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.11.2"
egg-smol = { git = "https://github.com/philzook58/egg-smol", branch = "ext-sort" }
symbol_table = {git = "https://github.com/mwillsey/symbol_table", rev = "acddcf8938d1b4ed2fce048c9d83c30203d404b9", features = ["global"]}
clap = "4.0.26"
env_logger = "0.9.3"
log = "0.4.17"
